# mdedit

./: .gitignore  README.md  index.html  package-lock.json  package.json  test_table.mjs  vite.config.ts
docs/: user-documentation.html
scripts/: release.mjs  sync-version.mjs
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: file-operations.toml
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: IconButton.tsx  Layout.tsx  OutlineSidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/features/documents/: documentService.ts  exportService.ts  fileActionService.ts
src/features/editor/: Editor.tsx  codeBlockSyntax.ts  editorCommands.ts  editorExtensions.ts  outline.ts  useDragDropHandler.ts  useEditorController.ts
src/features/ux/: AboutDialog.tsx  useAppUx.tsx
src/lib/: utils.ts
src/services/: appStateService.ts  markdownService.ts  pdfRenderer.ts  tauriBridge.ts
src/stores/: documentStore.ts
src/types/: index.ts
www/: index.html  style.css
