[package]
name = "mdedit"
version = "1.0.0"
description = "A WYSIWYG Markdown editor"
authors = []
edition = "2021"

[lib]
name = "mdedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
